fix letter spacing and font weight

--- a/assets/about.css
+++ b/assets/about.css
@@ -5,6 +5,7 @@
 
 #about .infos {
   line-height: 18px;
+  letter-spacing: 1px;
   display: flex;
   flex-direction: row;
   justify-content: center;
