--- a/assets/border.css
+++ b/assets/border.css
@@ -2,7 +2,6 @@ html, body {
   margin:0;
   padding:0;
   font-family: 'Open Sans', sans-serif;
-  font-weight: lighter;
   font-size: 0.95em;
 }
 
